[project]
name = "garmin-llm-export"
version = "0.1.0"
description = "Export Garmin Connect health and fitness data as LLM-readable plain text"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [{ name = "Garmin LLM Export Contributors" }]
keywords = ["garmin", "garmin-connect", "export", "llm", "notebooklm", "health", "fitness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "garminconnect>=0.3.4",
    "curl-cffi>=0.7",
]

[project.scripts]
garmin-export = "garmin_llm_export.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["garmin_llm_export"]

[tool.uv]
package = true
