[project]
name = "garmin-llm-export"
version = "0.2.0-alpha"
description = "Export Garmin Connect health and fitness data as LLM-readable plain text"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [{ name = "Garmin LLM Export Contributors" }]
keywords = ["garmin", "garmin-connect", "export", "llm", "notebooklm", "health", "fitness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "garminconnect>=0.3.4",
    "curl-cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.5",
]

[project.scripts]
garmin-export = "garmin_llm_export.cli:main"
garmin-sleep = "garmin_llm_export.sleep_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["garmin_llm_export"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["garmin_llm_export"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
package = true
